--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             @mouseleave="hover = false"
             class="text-2xl font-bold text-white">
             <img
-              :src="scrolled || hover ? 'assets/images/brand-hover.svg' : 'assets/images/brand.svg'"
+              :src="scrolled || hover ? 'assets/images/brand-hover-ThreeVerse.svg' : 'assets/images/brand-ThreeVerse.svg'"
               class="w-auto h-6 sm:h-7 transition-all duration-300"
               alt="Brand Logo" />
           </a>
