--- a/index.html
+++ b/index.html
@@ -242,14 +242,14 @@
       </div>
       <div class="w-full lg:w-6/12">
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-1 lg:gap-12 gap-10">
+
           <!-- Team Card -->
           <div class="flex p-4 shadow-md">
             <div class="mr-6">
-              <img class="mr-6" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/about-us-3-svg4.svg"
-                alt="team card" />
+              <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/about-us-3-svg4.svg" alt="board card" />
             </div>
             <div class>
-              <p class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-gray-800 dark:text-white">
+              <p class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-white">
                 Team
               </p>
               <p class="mt-2 font-normal text-base leading-6 text-white">
