--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             'fixed top-0 left-0 right-0 z-50 p-6 bg-white/70 rounded-b-lg dark:bg-gray-900/70 backdrop-blur-md shadow-md': scrolled,
             'relative': !scrolled
         }"
-        x-data="{ isOpen: false, active: 'home' }"
+        x-data="{ isOpen: false, active: 'hero' }"
         class="transition-all py-6 duration-300 container mx-auto lg:flex lg:justify-between lg:items-center"
       >
         <div class="flex items-center justify-between">
@@ -46,7 +46,7 @@
             class="text-2xl font-bold text-white"
           >
             <img
-              :src="scrolled || hover ? 'assets/images/brand-hover.svg' : 'assets/images/brand.svg'"
+              :src="scrolled || hover ? 'assets/images/brand/brand-hover.svg' : 'assets/images/brand/brand.svg'"
               class="w-auto h-6 sm:h-7 transition-all duration-300"
               alt="Brand Logo"
             />
@@ -101,19 +101,20 @@
           x-cloak
           x-transition
           :class="[isOpen ? 'translate-x-0 opacity-100' : 'opacity-0 -translate-x-full']"
-          class="absolute inset-x-0 z-20 w-full px-6 py-4 transition-all duration-300 ease-in-out bg-white shadow-md lg:bg-transparent lg:shadow-none dark:bg-gray-900 lg:mt-0 lg:p-0 lg:top-0 lg:relative lg:w-auto lg:opacity-100 lg:translate-x-0 lg:flex lg:items-center"
+          class="absolute inset-x-0 z-20 w-full px-6 py-4 transition-all duration-300 ease-in-out bg-black shadow-md lg:bg-transparent lg:shadow-none dark:bg-gray-900 lg:mt-0 lg:p-0 lg:top-0 lg:relative lg:w-auto lg:opacity-100 lg:translate-x-0 lg:flex lg:items-center"
         >
           <div
             class="flex flex-col space-y-4 lg:flex-row lg:space-y-0 lg:space-x-8"
           >
-            <!-- Add active state -->
             <a
               href="#hero"
-              @click="active = 'home'"
+              @click="active = 'hero'"
               :class="{
-          'text-indigo-700 font-semibold dark:text-blue-400': active === 'home',
-          'text-white dark:text-gray-200 hover:text-indigo-700 dark:hover:text-blue-400': active !== 'home'
-        }"
+                'text-[#CF32D2] font-semibold dark:text-blue-400': active === 'hero',
+                'text-white dark:text-gray-200 hover:text-[#CF32D2] dark:hover:text-blue-400': active !== 'hero' && !scrolled,
+                'text-[#CF32D2]': active === 'hero' && scrolled,
+                'text-black hover:text-[#CF32D2]': active !== 'hero' && scrolled
+              }"
               class="transition-colors duration-300"
             >
               Home
@@ -122,20 +123,24 @@
               href="#about"
               @click="active = 'about'"
               :class="{
-          'text-indigo-700 font-semibold dark:text-blue-400': active === 'about',
-          'text-white dark:text-gray-200 hover:text-indigo-700 dark:hover:text-blue-400': active !== 'about'
-        }"
+                'text-[#CF32D2] font-semibold dark:text-blue-400': active === 'about',
+                'text-white dark:text-gray-200 hover:text-[#CF32D2] dark:hover:text-blue-400': active !== 'about' && !scrolled,
+                'text-[#CF32D2]': active === 'about' && scrolled,
+                'text-black hover:text-[#CF32D2]': active !== 'about' && scrolled
+              }"
               class="transition-colors duration-300"
             >
               About
             </a>
             <a
               href="#features"
-              @click="active = 'pricing'"
+              @click="active = 'features'"
               :class="{
-          'text-indigo-700 font-semibold dark:text-blue-400': active === 'pricing',
-          'text-white dark:text-gray-200 hover:text-indigo-700 dark:hover:text-blue-400': active !== 'pricing'
-        }"
+                'text-[#CF32D2] font-semibold dark:text-blue-400': active === 'features',
+                'text-white dark:text-gray-200 hover:text-[#CF32D2] dark:hover:text-blue-400': active !== 'features' && !scrolled,
+                'text-[#CF32D2]': active === 'features' && scrolled,
+                'text-black hover:text-[#CF32D2]': active !== 'features' && scrolled
+              }"
               class="transition-colors duration-300"
             >
               Pricing
@@ -144,9 +149,11 @@
               href="#contact"
               @click="active = 'contact'"
               :class="{
-          'text-indigo-700 font-semibold dark:text-blue-400': active === 'contact',
-          'text-white dark:text-gray-200 hover:text-indigo-700 dark:hover:text-blue-400': active !== 'contact'
-        }"
+                'text-[#CF32D2] font-semibold dark:text-blue-400': active === 'contact',
+                'text-white dark:text-gray-200 hover:text-[#CF32D2] dark:hover:text-blue-400': active !== 'contact' && !scrolled,
+                'text-[#CF32D2]': active === 'contact' && scrolled,
+                'text-black hover:text-[#CF32D2]': active !== 'contact' && scrolled
+              }"
               class="transition-colors duration-300"
             >
               Contact
@@ -168,18 +175,22 @@
           <div class="md:flex items-center gap-8 justify-center">
             <div class="w-full md:w-1/2 text-center md:text-left">
               <h1
-                class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-white font-black leading-7 md:leading-10 font-orbitron"
+                class="text-2xl mb-5 sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-white font-black leading-7 md:leading-10 font-orbitron"
               >
-                Let's Explore
-                <span class="text-indigo-700">Three-Dimensional</span>
-                visual
+                Explore in the
+                <span
+                  class="bg-gradient-to-r from-[#25DDDD] to-[#CF32D2] text-transparent bg-clip-text"
+                >
+                  metaverse
+                </span>
+                one pixel at a time
               </h1>
 
               <p
                 class="text-base lg:text-lg text-white mb-10 max-w-prose mx-auto md:mx-0"
               >
-                With virtual technology you can see the digital world feel more
-                real and you can play the game with a new style.
+                Virtual Reality is redefining our experience of the digital
+                world, turning imagination into immersive, interactive reality.
               </p>
               <div
                 class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4 justify-center md:justify-start"
@@ -198,9 +209,9 @@
             </div>
             <div class="w-full md:w-1/2 mt-8 md:mt-0 flex justify-center">
               <img
-                src="assets/images/hero.svg"
+                src="assets/images/hero/hero.svg"
                 alt="Product Screenshot"
-                class="w-full max-w-md object-cover rounded-lg"
+                class="w-full max-w-3xl object-cover rounded-lg"
               />
             </div>
           </div>
@@ -210,30 +221,33 @@
 
     <div
       id="about"
-      class="bg-white 2xl:container 2xl:mx-auto lg:py-16 lg:px-20 md:py-12 md:px-6 py-9 px-4"
+      class="bg-[#010101] 2xl:container 2xl:mx-auto lg:py-16 lg:px-20 md:py-12 md:px-6 py-9 px-4"
     >
       <p
-        class="font-normal text-sm leading-3 text-indigo-700 dark:text-indigo-500 hover:text-indigo-800 cursor-pointer pb-2"
+        class="font-normal text-lg leading-3 text-white hover:text-indigo-800 cursor-pointer pb-2"
       >
-        About
+        About Us
       </p>
       <div class="flex lg:flex-row flex-col lg:gap-8 sm:gap-10 gap-12">
         <div class="w-full lg:w-6/12">
           <h2
-            class="w-full font-bold lg:text-4xl text-3xl lg:leading-10 dark:text-white leading-9"
+            class="w-full font-bold lg:text-4xl text-3xl lg:leading-10 text-white leading-9"
           >
-            We are here to make great design accessible and delightfull for
-            everyone
+            Welcome to the Future of Connection and Immersion
           </h2>
-          <p
-            class="font-normal text-base leading-6 text-gray-600 dark:text-gray-200 mt-6"
-          >
-            It is a long established fact that a reader will be distracted by
-            the readable content of a page when looking at its layout. The point
-            of using Lorem Ipsum.In the first place we have granted to God, and
-            by this our present charter confirmed for us and our heirs forever
-            that the English Church shall be free, and shall have her rights
-            entire,
+          <p class="font-normal text-base leading-6 text-white mt-6">
+            In the ever-evolving digital landscape, the Metaverse represents a
+            bold new frontier—a universe where reality and virtual worlds
+            seamlessly intertwine. Our platform is dedicated to bringing this
+            vision to life by creating an immersive space where you can explore,
+            connect, and innovate without limits. We believe that the metaverse
+            is more than just technology—it's a revolution in how we experience
+            the world, redefining the boundaries of creativity, collaboration,
+            and community. Whether you're here to socialize, build, or learn,
+            our goal is to provide tools and experiences that empower you to
+            shape your own reality. Join us as we embark on this journey to
+            create a limitless virtual universe, where the only boundaries are
+            those of your imagination.
           </p>
         </div>
         <div class="w-full lg:w-6/12">
@@ -283,39 +297,33 @@
       <div class="grid sm:grid-cols-3 grid-cols-2 sm:gap-8 gap-4">
         <div>
           <p
-            class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-gray-800 dark:text-white mt-6"
+            class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-white mt-6"
           >
             Founded
           </p>
-          <p
-            class="font-normal text-base leading-6 text-gray-600 dark:text-gray-200 mt-6"
-          >
+          <p class="font-normal text-base leading-6 text-white mt-6">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
           </p>
         </div>
         <div>
           <p
-            class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-gray-800 dark:text-white mt-6"
+            class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-white mt-6"
           >
             50M montly enrichments
           </p>
-          <p
-            class="font-normal text-base leading-6 text-gray-600 dark:text-gray-200 mt-6"
-          >
+          <p class="font-normal text-base leading-6 text-white mt-6">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
           </p>
         </div>
         <div class="sm:block hidden">
           <p
-            class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-gray-800 dark:text-white mt-6"
+            class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-white mt-6"
           >
             400k User
           </p>
-          <p
-            class="font-normal text-base leading-6 text-gray-600 dark:text-gray-200 mt-6"
-          >
+          <p class="font-normal text-base leading-6 text-white mt-6">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
           </p>
@@ -333,13 +341,11 @@
       <div class="sm:hidden grid sm:grid-cols-3 grid-cols-2 sm:gap-8 gap-4">
         <div>
           <p
-            class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-gray-800 dark:text-white mt-6"
+            class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-white mt-6"
           >
             400k User
           </p>
-          <p
-            class="font-normal text-base leading-6 text-gray-600 dark:text-gray-200 mt-6"
-          >
+          <p class="font-normal text-base leading-6 text-white mt-6">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
           </p>
@@ -351,12 +357,12 @@
       >
         <div class="w-full lg:w-6/12">
           <h2
-            class="font-bold lg:text-4xl text-3xl lg:leading-9 leading-7 text-gray-800 dark:text-white"
+            class="font-bold lg:text-4xl text-3xl lg:leading-9 leading-7 text-white"
           >
             Our Mission
           </h2>
           <p
-            class="font-normal text-base leading-6 text-gray-600 dark:text-gray-200 mt-6 w-full lg:w-10/12 xl:w-9/12"
+            class="font-normal text-base leading-6 text-white mt-6 w-full lg:w-10/12 xl:w-9/12"
           >
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
@@ -367,7 +373,7 @@
             observed; which is apparent from
           </p>
           <p
-            class="font-normal text-base leading-6 text-gray-600 dark:text-gray-200 w-full lg:w-10/12 xl:w-9/12 mt-10"
+            class="font-normal text-base leading-6 text-white w-full lg:w-10/12 xl:w-9/12 mt-10"
           >
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
@@ -391,15 +397,13 @@
                   alt="team card"
                 />
               </div>
-              <div class="">
+              <div class>
                 <p
                   class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-gray-800 dark:text-white"
                 >
                   Team
                 </p>
-                <p
-                  class="mt-2 font-normal text-base leading-6 text-gray-600 dark:text-gray-200"
-                >
+                <p class="mt-2 font-normal text-base leading-6 text-white">
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
                 </p>
@@ -414,15 +418,13 @@
                   alt="board card"
                 />
               </div>
-              <div class="">
+              <div class>
                 <p
-                  class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-gray-800 dark:text-white"
+                  class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-white"
                 >
                   Board
                 </p>
-                <p
-                  class="mt-2 font-normal text-base leading-6 text-gray-600 dark:text-gray-200"
-                >
+                <p class="mt-2 font-normal text-base leading-6 text-white">
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
                 </p>
@@ -437,15 +439,13 @@
                   alt="press card"
                 />
               </div>
-              <div class="">
+              <div class>
                 <p
-                  class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-gray-800 dark:text-white"
+                  class="font-semibold lg:text-2xl text-xl lg:leading-6 leading-5 text-white"
                 >
                   Press
                 </p>
-                <p
-                  class="mt-2 font-normal text-base leading-6 text-gray-600 dark:text-gray-200"
-                >
+                <p class="mt-2 font-normal text-base leading-6 text-white">
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
                 </p>
@@ -476,7 +476,7 @@
           <div
             class="p-8 space-y-3 border-2 border-blue-400 dark:border-blue-300 rounded-xl"
           >
-            <span class="inline-block text-indigo-700 dark:text-blue-400">
+            <span class="inline-block text-[#CF32D2] dark:text-blue-400">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-8 h-8"
@@ -513,7 +513,7 @@
 
             <a
               href="#"
-              class="inline-flex p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-blue-100 rounded-full rtl:-scale-x-100 dark:bg-blue-500 dark:text-white hover:underline hover:text-blue-600 dark:hover:text-indigo-700"
+              class="inline-flex p-2 text-[#CF32D2] capitalize transition-colors duration-300 transform bg-blue-100 rounded-full rtl:-scale-x-100 dark:bg-blue-500 dark:text-white hover:underline hover:text-blue-600 dark:hover:text-[#CF32D2]"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -535,7 +535,7 @@
           <div
             class="p-8 space-y-3 border-2 border-blue-400 dark:border-blue-300 rounded-xl"
           >
-            <span class="inline-block text-indigo-700 dark:text-blue-400">
+            <span class="inline-block text-[#CF32D2] dark:text-blue-400">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-8 h-8"
@@ -566,7 +566,7 @@
 
             <a
               href="#"
-              class="inline-flex p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-blue-100 rounded-full rtl:-scale-x-100 dark:bg-blue-500 dark:text-white hover:underline hover:text-blue-600 dark:hover:text-indigo-700"
+              class="inline-flex p-2 text-[#CF32D2] capitalize transition-colors duration-300 transform bg-blue-100 rounded-full rtl:-scale-x-100 dark:bg-blue-500 dark:text-white hover:underline hover:text-blue-600 dark:hover:text-[#CF32D2]"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -588,7 +588,7 @@
           <div
             class="p-8 space-y-3 border-2 border-blue-400 dark:border-blue-300 rounded-xl"
           >
-            <span class="inline-block text-indigo-700 dark:text-blue-400">
+            <span class="inline-block text-[#CF32D2] dark:text-blue-400">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-8 h-8"
@@ -619,7 +619,7 @@
 
             <a
               href="#"
-              class="inline-flex p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-blue-100 rounded-full rtl:-scale-x-100 dark:bg-blue-500 dark:text-white hover:underline hover:text-blue-600 dark:hover:text-indigo-700"
+              class="inline-flex p-2 text-[#CF32D2] capitalize transition-colors duration-300 transform bg-blue-100 rounded-full rtl:-scale-x-100 dark:bg-blue-500 dark:text-white hover:underline hover:text-blue-600 dark:hover:text-[#CF32D2]"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
