Fix padding navbar

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             'relative': !scrolled
         }"
         x-data="{ isOpen: false, active: 'hero' }"
-        class="transition-all py-6 duration-300 container mx-auto lg:flex lg:justify-between lg:items-center"
+        class="transition-all px-4 md:px-0 py-6 duration-300 container mx-auto lg:flex lg:justify-between lg:items-center"
       >
         <div class="flex items-center justify-between">
           <a
