fix responsive color navbar

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 'text-[#CF32D2] font-semibold dark:text-blue-400': active === 'hero',
                 'text-white dark:text-gray-200 hover:text-[#CF32D2] dark:hover:text-blue-400': active !== 'hero' && !scrolled,
                 'text-[#CF32D2]': active === 'hero' && scrolled,
-                'text-black hover:text-[#CF32D2]': active !== 'hero' && scrolled
+                'text-white md:text-black hover:text-[#CF32D2]': active !== 'hero' && scrolled
               }"
               class="transition-colors duration-300"
             >
@@ -126,7 +126,7 @@
                 'text-[#CF32D2] font-semibold dark:text-blue-400': active === 'about',
                 'text-white dark:text-gray-200 hover:text-[#CF32D2] dark:hover:text-blue-400': active !== 'about' && !scrolled,
                 'text-[#CF32D2]': active === 'about' && scrolled,
-                'text-black hover:text-[#CF32D2]': active !== 'about' && scrolled
+                'text-white md:text-black hover:text-[#CF32D2]': active !== 'about' && scrolled
               }"
               class="transition-colors duration-300"
             >
@@ -139,7 +139,7 @@
                 'text-[#CF32D2] font-semibold dark:text-blue-400': active === 'features',
                 'text-white dark:text-gray-200 hover:text-[#CF32D2] dark:hover:text-blue-400': active !== 'features' && !scrolled,
                 'text-[#CF32D2]': active === 'features' && scrolled,
-                'text-black hover:text-[#CF32D2]': active !== 'features' && scrolled
+                'text-white md:text-black hover:text-[#CF32D2]': active !== 'features' && scrolled
               }"
               class="transition-colors duration-300"
             >
@@ -152,7 +152,7 @@
                 'text-[#CF32D2] font-semibold dark:text-blue-400': active === 'contact',
                 'text-white dark:text-gray-200 hover:text-[#CF32D2] dark:hover:text-blue-400': active !== 'contact' && !scrolled,
                 'text-[#CF32D2]': active === 'contact' && scrolled,
-                'text-black hover:text-[#CF32D2]': active !== 'contact' && scrolled
+                'text-white md:text-black hover:text-[#CF32D2]': active !== 'contact' && scrolled
               }"
               class="transition-colors duration-300"
             >
