fix bg-color about

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
       rel="stylesheet"
     />
   </head>
-  Navbar with Scroll-Based Section Activation
-
   <body
     x-data="{ 
         scrolled: false, 
@@ -234,7 +232,7 @@
 
     <div
       id="about"
-      class="bg-[#010101] 2xl:container 2xl:mx-auto lg:py-16 lg:px-20 md:py-12 md:px-6 py-9 px-4"
+      class="2xl:container 2xl:mx-auto lg:py-16 lg:px-20 md:py-12 md:px-6 py-9 px-4"
     >
       <p
         class="font-normal text-lg leading-3 text-white hover:text-indigo-800 cursor-pointer pb-2"
