--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <button
                   class="w-full sm:w-auto px-6 py-3 bg-indigo-200 text-indigo-600 font-medium rounded-lg hover:bg-indigo-300 transition-colors"
                 >
-                  Try it out
+                  Try it out tes
                 </button>
               </div>
             </div>
