perbaikan fitur explore

--- a/index.html
+++ b/index.html
@@ -616,16 +616,18 @@
 
         <div
           class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 xl:gap-12 md:grid-cols-2 xl:grid-cols-3">
+
+          <!-- Card 1 -->
           <div
-            class="p-8 space-y-3 border-2 border-indigo-400 dark:border-indigo-300 rounded-xl">
+            class="p-8 flex flex-col border-2 border-indigo-400 dark:border-indigo-300 rounded-xl">
             <img
               src="assets/images/explore/Explore-Virtual-Reality.svg"
               alt="Feature 1"
               class="h-64 w-full object-cover rounded-lg" />
-            <h1 class="text-xl font-semibold text-white capitalize">
+            <h1 class="text-xl font-semibold text-white capitalize mt-3">
               Virtual Reality
             </h1>
-            <p class="text-white">
+            <p class="text-white flex-grow">
               Virtual reality (VR) is a technology that creates
               three-dimensional simulated environments that users can access and
               explore through specialized devices, such as VR headsets. This
@@ -634,34 +636,37 @@
               world, allowing users to feel as if they are actually inside the
               environment.
             </p>
-            <a
-              href="#"
-              class="inline-flex p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-indigo-100 rounded-full rtl:-scale-x-100 dark:bg-indigo-500 hover:underline hover:text-indigo-600 dark:hover:text-indigo-700">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="w-6 h-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor">
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-              </svg>
-            </a>
+            <div class="flex justify-end mt-4">
+              <a
+                href="#"
+                class="inline-flex items-center justify-center p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-indigo-100 rounded-full rtl:-scale-x-100 dark:bg-indigo-500 hover:underline hover:text-indigo-600 dark:hover:text-indigo-700">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-6 h-6"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor">
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+              </a>
+            </div>
           </div>
 
+          <!-- Card 2 -->
           <div
-            class="p-8 space-y-3 border-2 border-indigo-400 dark:border-indigo-300 rounded-xl">
+            class="p-8 flex flex-col border-2 border-indigo-400 dark:border-indigo-300 rounded-xl">
             <img
               src="assets/images/explore/Explore-Augmanted-Reality.svg"
               alt="Feature 2"
               class="h-64 w-full object-cover rounded-lg" />
-            <h1 class="text-xl font-semibold text-white capitalize">
+            <h1 class="text-xl font-semibold text-white capitalize mt-3">
               Augmented Reality
             </h1>
-            <p class="text-white">
+            <p class="text-white flex-grow">
               Augmented reality (AR) is a technology that combines virtual
               elements, such as images, sounds, or digital information, with the
               real world in real-time. AR is typically used through devices such
@@ -670,34 +675,37 @@
               physical environment. Examples of AR applications are gaming apps,
               navigation guides, or product visualizations.
             </p>
-            <a
-              href="#"
-              class="inline-flex p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-indigo-100 rounded-full rtl:-scale-x-100 dark:bg-indigo-500 hover:underline hover:text-indigo-600 dark:hover:text-indigo-700">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="w-6 h-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor">
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-              </svg>
-            </a>
+            <div class="flex justify-end mt-4">
+              <a
+                href="#"
+                class="inline-flex items-center justify-center p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-indigo-100 rounded-full rtl:-scale-x-100 dark:bg-indigo-500 hover:underline hover:text-indigo-600 dark:hover:text-indigo-700">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-6 h-6"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor">
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+              </a>
+            </div>
           </div>
 
+          <!-- Card 3 -->
           <div
-            class="p-8 space-y-3 border-2 border-indigo-400 dark:border-indigo-300 rounded-xl">
+            class="p-8 flex flex-col border-2 border-indigo-400 dark:border-indigo-300 rounded-xl">
             <img
               src="assets/images/explore/Explore-Mixed-Reality.svg"
               alt="Feature 3"
               class="h-64 w-full object-cover rounded-lg" />
-            <h1 class="text-xl font-semibold text-white capitalize">
+            <h1 class="text-xl font-semibold text-white capitalize mt-3">
               Mixed Reality
             </h1>
-            <p class="text-white">
+            <p class="text-white flex-grow">
               Mixed Reality (MR) is a technology that combines elements of the
               real and virtual worlds, allowing interaction between the two in
               real time. MR creates environments where digital and physical
@@ -709,22 +717,24 @@
               Examples are training simulations or interactive architectural
               designs.
             </p>
-            <a
-              href="#"
-              class="inline-flex p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-indigo-100 rounded-full rtl:-scale-x-100 dark:bg-indigo-500 hover:underline hover:text-indigo-600 dark:hover:text-indigo-700">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="w-6 h-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor">
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-              </svg>
-            </a>
+            <div class="flex justify-end mt-4">
+              <a
+                href="#"
+                class="inline-flex items-center justify-center p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-indigo-100 rounded-full rtl:-scale-x-100 dark:bg-indigo-500 hover:underline hover:text-indigo-600 dark:hover:text-indigo-700">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="w-6 h-6"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor">
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+              </a>
+            </div>
           </div>
         </div>
       </div>
