--- a/index.html
+++ b/index.html
@@ -602,143 +602,112 @@
       </div>
     </section>
 
-    <section id="features" class="min-h-screen">
+    <section id="explore" class="min-h-screen">
       <div data-aos="zoom-out-up" class="container px-6 py-10 mx-auto">
         <h1 class="text-2xl font-semibold capitalize lg:text-3xl text-white">
           explore exciting <br />
-          <span class="underline decoration-indigo-500">Virtual Realities</span>
+          <span class="underline decoration-indigo-500">Metaverse</span>
         </h1>
 
         <p class="mt-4 text-white xl:mt-6">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum quam
-          voluptatibus
+          voluptatibus.
         </p>
 
         <div
           class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 xl:gap-12 md:grid-cols-2 xl:grid-cols-3">
-
-          <!-- Card 1 -->
+          <!-- Card 1: Virtual Reality -->
           <div
             class="p-8 flex flex-col border-2 border-indigo-400 dark:border-indigo-300 rounded-xl">
-            <img
-              src="assets/images/explore/Explore-Virtual-Reality.svg"
-              alt="Feature 1"
-              class="h-64 w-full object-cover rounded-lg" />
-            <h1 class="text-xl font-semibold text-white capitalize mt-3">
-              Virtual Reality
-            </h1>
+            <img src="assets/images/explore/Explore-Virtual-Reality.svg"
+              alt="Feature 1" class="h-64 w-full object-cover rounded-lg" />
+            <h1 class="text-xl font-semibold text-white capitalize mt-3">Virtual
+              Reality</h1>
             <p class="text-white flex-grow">
               Virtual reality (VR) is a technology that creates
-              three-dimensional simulated environments that users can access and
-              explore through specialized devices, such as VR headsets. This
-              technology provides an immersive experience by presenting visuals,
-              audio, and interactions that resemble the real or artificial
-              world, allowing users to feel as if they are actually inside the
-              environment.
+              three-dimensional simulated environments.
             </p>
             <div class="flex justify-end mt-4">
-              <a
-                href="#"
-                class="inline-flex items-center justify-center p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-indigo-100 rounded-full rtl:-scale-x-100 dark:bg-indigo-500 hover:underline hover:text-indigo-600 dark:hover:text-indigo-700">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="w-6 h-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
+              <button
+                onclick="openModal('https://www.youtube.com/embed/SCrkZOx5Q1M')"
+                class="p-2 bg-indigo-100 rounded-full dark:bg-indigo-500 hover:text-indigo-700">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6"
+                  fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round"
                     stroke-width="2"
                     d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
-              </a>
+              </button>
             </div>
           </div>
 
-          <!-- Card 2 -->
+          <!-- Card 2: Augmented Reality -->
           <div
             class="p-8 flex flex-col border-2 border-indigo-400 dark:border-indigo-300 rounded-xl">
-            <img
-              src="assets/images/explore/Explore-Augmanted-Reality.svg"
-              alt="Feature 2"
-              class="h-64 w-full object-cover rounded-lg" />
-            <h1 class="text-xl font-semibold text-white capitalize mt-3">
-              Augmented Reality
-            </h1>
+            <img src="assets/images/explore/Explore-Augmanted-Reality.svg"
+              alt="Feature 2" class="h-64 w-full object-cover rounded-lg" />
+            <h1
+              class="text-xl font-semibold text-white capitalize mt-3">Augmented
+              Reality</h1>
             <p class="text-white flex-grow">
-              Augmented reality (AR) is a technology that combines virtual
-              elements, such as images, sounds, or digital information, with the
-              real world in real-time. AR is typically used through devices such
-              as smartphones, tablets, or specialized glasses, which allow users
-              to view and interact with virtual objects projected onto their
-              physical environment. Examples of AR applications are gaming apps,
-              navigation guides, or product visualizations.
+              Augmented reality (AR) combines virtual elements with the real
+              world in real-time.
             </p>
             <div class="flex justify-end mt-4">
-              <a
-                href="#"
-                class="inline-flex items-center justify-center p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-indigo-100 rounded-full rtl:-scale-x-100 dark:bg-indigo-500 hover:underline hover:text-indigo-600 dark:hover:text-indigo-700">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="w-6 h-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
+              <button
+                onclick="openModal('https://www.youtube.com/embed/D8V2nxeWHmI')"
+                class="p-2 bg-indigo-100 rounded-full dark:bg-indigo-500 hover:text-indigo-700">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6"
+                  fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round"
                     stroke-width="2"
                     d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
-              </a>
+              </button>
             </div>
           </div>
 
-          <!-- Card 3 -->
+          <!-- Card 3: Mixed Reality -->
           <div
             class="p-8 flex flex-col border-2 border-indigo-400 dark:border-indigo-300 rounded-xl">
-            <img
-              src="assets/images/explore/Explore-Mixed-Reality.svg"
-              alt="Feature 3"
-              class="h-64 w-full object-cover rounded-lg" />
-            <h1 class="text-xl font-semibold text-white capitalize mt-3">
-              Mixed Reality
-            </h1>
+            <img src="assets/images/explore/Explore-Mixed-Reality.svg"
+              alt="Feature 3" class="h-64 w-full object-cover rounded-lg" />
+            <h1 class="text-xl font-semibold text-white capitalize mt-3">Mixed
+              Reality</h1>
             <p class="text-white flex-grow">
-              Mixed Reality (MR) is a technology that combines elements of the
-              real and virtual worlds, allowing interaction between the two in
-              real time. MR creates environments where digital and physical
-              objects can interact dynamically and naturally, often using
-              devices such as specialized headsets (e.g., Microsoft HoloLens).
-              This technology combines the capabilities of Augmented Reality
-              (AR) and Virtual Reality (VR), allowing users to interact with
-              virtual elements that look as if they are part of the real world.
-              Examples are training simulations or interactive architectural
-              designs.
+              Mixed reality (MR) blends real and virtual worlds for interactive
+              experiences.
             </p>
             <div class="flex justify-end mt-4">
-              <a
-                href="#"
-                class="inline-flex items-center justify-center p-2 text-indigo-700 capitalize transition-colors duration-300 transform bg-indigo-100 rounded-full rtl:-scale-x-100 dark:bg-indigo-500 hover:underline hover:text-indigo-600 dark:hover:text-indigo-700">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="w-6 h-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
+              <button
+                onclick="openModal('https://www.youtube.com/embed/Hai7zZYX8D0')"
+                class="p-2 bg-indigo-100 rounded-full dark:bg-indigo-500 hover:text-indigo-700">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6"
+                  fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round"
                     stroke-width="2"
                     d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
-              </a>
+              </button>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- Modal -->
+    <div id="videoModal"
+      class="fixed inset-0 flex items-center justify-center hidden bg-black bg-opacity-75 z-50">
+      <div class="relative w-full max-w-3xl">
+        <!-- Tombol Close -->
+        <button onclick="closeModal()"
+          class="absolute top-2 right-2 text-white text-3xl">&times;</button>
+        <!-- Video -->
+        <iframe id="youtubeFrame" class="w-full h-96 rounded-lg" src
+          frameborder="0" allow="autoplay; encrypted-media"
+          allowfullscreen></iframe>
+      </div>
+    </div>
 
     <section id="blog" class="min-h-screen">
       <div data-aos="zoom-out-up" class="container px-6 py-10 mx-auto">
@@ -1279,5 +1248,21 @@
         once: true,
       });
     </script>
+
+    <script>
+  function openModal(videoUrl) {
+    const modal = document.getElementById("videoModal");
+    const iframe = document.getElementById("youtubeFrame");
+    iframe.src = videoUrl + "?autoplay=1"; // Video otomatis diputar
+    modal.classList.remove("hidden");
+  }
+
+  function closeModal() {
+    const modal = document.getElementById("videoModal");
+    const iframe = document.getElementById("youtubeFrame");
+    iframe.src = ""; // Hentikan video
+    modal.classList.add("hidden");
+  }
+  </script>
   </body>
 </html>
