penambahan deskripsi di eksplor

--- a/index.html
+++ b/index.html
@@ -610,8 +610,7 @@
         </h1>
 
         <p class="mt-4 text-white xl:mt-6">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum quam
-          voluptatibus.
+          Here are some of the metaverse technologies that are currently developing very rapidly
         </p>
 
         <div
