--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
 
           <div class="flex flex-wrap justify-center mt-6 -mx-4">
             <a
-              href="#home"
+              href="#"
               class="mx-4 text-sm text-white transition-colors duration-300 hover:text-indigo-700 dark:hover:text-indigo-400"
               aria-label="Reddit">
               Home
@@ -1191,7 +1191,7 @@
             © 2024 TINFC-2024-01 A. Created with dedication for a better future.
           </p>
 
-          <div class="flex -mx-2">
+          <div class="flex -mx-2 mt-2">
             <a
               href="#"
               class="mx-2 text-white transition-colors duration-300 hover:text-indigo-700 dark:hover:text-indigo-400"
