--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"
       rel="stylesheet" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <!-- Favicon SVG -->
+    <link rel="icon" href="assets/images/favicon.svg" type="image/svg+xml" />
+    <!-- Favicon PNG as fallback -->
+    <!-- <link rel="icon" href="assets/images/favicon.png" type="image/png" /> -->
   </head>
   <body
     x-data="{ 
